# diffly

./: .gitignore  AGENTS.md  CLAUDE.MD  CONTRIBUTING.md  README.md  SECURITY.md  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.electron.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agents/: claude.md
diffly/: README.md  package-lock.json  package.json  vite.config.ts
diffly/src/: App.svelte  app.css
diffly/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
diffly/src-tauri/icons/: icon.icns
diffly/src-tauri/src/: lib.rs  main.rs
diffly/src/lib/: DiffViewer.svelte  EntryIcon.svelte  PickerPane.svelte  api.ts  diff-render.ts  path-utils.ts  types.ts  ui-types.ts
diffly/test-fixtures/directories/left/: case-only.txt  delete-block.md  inline-change.css  insert-block.md  left-only.txt  whitespace-only.txt
diffly/test-fixtures/directories/right/: case-only.txt  delete-block.md  insert-block.md  punctuation-inline.json  right-only.txt  same.txt  whitespace-only.txt
profile/: README.md  SETUP.md
profile/pages/: skills.md
scripts/: clean-release-portable.ps1  ensure-frontend-build.mjs  generate-big-fixtures.mjs  run-tauri-debug-build.mjs  set-windows-icon.cjs
src/: App.svelte  app.css  global.d.ts  main.ts
src-electron/: main.ts  preload.ts
src-electron/services/: backend.ts
src-tauri/: Cargo.toml  build.rs  tauri.build.conf.json  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: debug-fast.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/nsis/: installer-hooks.nsh
src/lib/: AppTopBar.svelte  DiffViewer.svelte  DirectoryBrowser.svelte  Minimap.svelte  PickerPane.svelte  SettingsScreen.svelte  api.ts  binary-render.ts  diff-render.ts  diff-virtualization.ts  format.ts  merge-session.ts  minimap-render.ts  path-utils.ts  syntax.ts  text-session.ts  types.ts  ui-types.ts
src/lib/app/: diff-cache.ts  directory-state.ts  explorer-state.ts  pane-scroll-sync.ts  session.ts  startup.ts  theme-controller.ts  update-controller.ts
src/lib/settings/: AppearanceSettingsSection.svelte  ResetSettingsSection.svelte  ThemeEditorPanel.svelte  ThemePreviewCard.svelte  UpdateSettingsSection.svelte  ViewerSettingsSection.svelte
src/lib/theme/: index.ts  runtime.ts
test-fixtures/directories/: REAL_ASSETS.md
test-fixtures/directories/left/: block-rewrite.ts  case-only.txt  delete-block.md  inline-change.css  insert-block.md  left-only.txt  punctuation-inline.json  same.txt  too-large.txt  whitespace-only.txt
test-fixtures/directories/left/nested/docs/: reordered-notes.md
test-fixtures/directories/left/nested/include/: legacy_only.h
test-fixtures/directories/left/nested/src/: module.c
test-fixtures/directories/right/: block-rewrite.ts  case-only.txt  delete-block.md  inline-change.css  insert-block.md  punctuation-inline.json  right-only.txt  same.txt  too-large.txt  whitespace-only.txt
test-fixtures/directories/right/nested/include/: new_only.h
(+11 files in other folders)
