[package]
name = "diffly"
version = "0.1.0"
description = "Desktop file and directory diff tool."
authors = ["Diffly contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "diffly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.7"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
walkdir = "2.5"
rfd = "0.15"
