[package]
name = "diffly"
version = "0.1.0"
description = "Desktop file and directory diff tool."
authors = ["Diffly contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "diffly_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", default-features = false, features = ["config-json"] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.7"
tauri = { version = "2.10.3", default-features = false, features = ["wry"] }
tauri-plugin-log = "2"
tauri-plugin-window-state = "2.4.1"
walkdir = "2.5"
rfd = "0.15"
rayon = "1.10"

[profile.dev]
debug = 0
incremental = true
codegen-units = 256

[profile.release]
incremental = true
opt-level = 2
