[package]
name = "diffly"
version = "0.1.6-rc.4"
description = "Desktop file and directory diff tool."
authors = ["Diffly contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[features]
default = ["window-state"]
debug-log = ["dep:log", "dep:tauri-plugin-log"]
prerelease-updater = ["updater", "dep:reqwest"]
updater = ["dep:tauri-plugin-updater"]
window-state = ["dep:tauri-plugin-window-state"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "diffly_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", default-features = false, features = ["config-json"] }

[dependencies]
log = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
similar = "2.7"
tauri = { version = "2.10.3", default-features = false, features = ["protocol-asset", "wry"] }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-window-state = { version = "2.4.1", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
url = "2"
walkdir = "2.5"
rfd = "0.15"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[profile.dev]
debug = 0
incremental = true
codegen-units = 256

[profile.release]
incremental = true
opt-level = 2
